--- a/WebApplication1/Views/Login/Index.cshtml
+++ b/WebApplication1/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     Layout = null;
     ViewBag.Title = "Login";
 }
@@ -7,128 +7,148 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Login - NiceAdmin Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <title>Pages / Login - NiceAdmin Bootstrap Template</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Favicons -->
-  <link href="~/img/favicon.png" rel="icon">
-  <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="~/img/favicon.png" rel="icon">
+    <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
-  <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="~/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="~/vendor/quill/quill.snow.css" rel="stylesheet">
-  <link href="~/vendor/quill/quill.bubble.css" rel="stylesheet">
-  <link href="~/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="~/vendor/simple-datatables/style.css" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="~/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="~/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="~/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="~/vendor/simple-datatables/style.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="~/Content/style.css" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="~/Content/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Updated: Jul 27 2023 with Bootstrap v5.3.1
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    <!-- =======================================================
+    * Template Name: NiceAdmin
+    * Updated: Jul 27 2023 with Bootstrap v5.3.1
+    * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
+    <style>
+        body {
+            background-color: black;
+            justify-content: center;
+            display: flex;
+            align-items: center;
+            padding: 15%;
+        }
+
+        .model_container {
+            position: relative;
+            z-index: 2;
+            margin: auto;
+            max-width: inherit;
+            width: auto;
+        }
+
+        .auth {
+            display: flex;
+            width: 840px;
+            margin: 0 auto;
+            background-color: #262626;
+            border-radius: 24px;
+            box-shadow: 0px 8px 80px rgba(0,0,0,0,4);
+        }
+
+        .auth_background {
+            position: relative;
+        }
+
+            .auth_background img {
+                position: relative;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border-radius: 24px 0 0 24px;
+                object-fit: cover;
+            }
+
+        .auth_background, .auth_container {
+            flex: 0 0 420px;
+        }
+
+        .auth_container {
+            padding: 40px 40px 32px;
+        }
+
+        .title {
+            margin-bottom: 26px;
+            font-size: 28px;
+            font-weight: 450;
+            line-height: 40px;
+            color: white;
+        }
+        label{
+            color:white;
+        }
+        .form-control{
+            padding:10px;
+           
+        }
+        hr{            
+           border:3px solid white;
+        }
+        .btn-primary{
+            width:100%;
+            margin-top:3px;
+        }
+    </style>
 </head>
 
 <body>
 
-  <main>
-    <div class="container">
-
-      <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-
-              <div class="d-flex justify-content-center py-4">
-                <a href="#" class="logo d-flex align-items-center w-auto">
-                 <span class="d-none d-lg-block">電競戰隊管理系統</span>
-                </a>
-              </div><!-- End Logo -->
-
-              <div class="card mb-3">
-
-                <div class="card-body">
-
-                  <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">請先登錄</h5>
-                    <p class="text-center small">請輸入您的帳號及密碼</p>
-                  </div>
-
-                  <form class="row g-3 needs-validation" novalidate>
-
-                    <div class="col-12">
-                      <label for="yourUsername" class="form-label">Username</label>
-                      <div class="input-group has-validation">
-                      <input type="text" name="username" class="form-control" id="username" required>
-                        
-                      </div>
-                    </div>
-
-                    <div class="col-12">
-                      <label for="yourPassword" class="form-label">Password</label>
-                      <input type="password" name="password" class="form-control" id="password" required>
-                     
-                    </div>
-
-                    <div class="col-12">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="remember" value="true" id="rememberMe">
-                        <label class="form-check-label" for="rememberMe">Remember me</label>
-                      </div>
-                    </div>
-                    <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Login</button>
-                    </div>
-                 </form>
-
-                </div>
-              </div>
-
-              <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-              </div>
-                
+    <div class="model_container">
+        <div class="auth">
+            <div class="auth_background">
+                <img src="~/img/slides-1.jpg" alt="Sign in" />
             </div>
-          </div>
+            <div class="auth_container">
+                <h2 class="title"> Sign in to your account</h2> <hr />
+                <label>Username:</label>
+                <input type="text" class="form-control" id="Username" placeholder="帳號">
+                <label>Password:</label>
+                <input type="password" class="form-control" id="Username" placeholder="密碼"><br />
+                <button class="btn btn-primary">Login</button>
+            </div>
         </div>
 
-      </section>
-
     </div>
-  </main><!-- End #main -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="~/vendor/apexcharts/apexcharts.min.js"></script>
-  <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="~/vendor/chart.js/chart.umd.js"></script>
-  <script src="~/vendor/echarts/echarts.min.js"></script>
-  <script src="~/vendor/quill/quill.min.js"></script>
-  <script src="~/vendor/simple-datatables/simple-datatables.js"></script>
-  <script src="~/vendor/tinymce/tinymce.min.js"></script>
-  <script src="~/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="~/Scripts/main.js"></script>
+
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+    <!-- Vendor JS Files -->
+    <script src="~/vendor/apexcharts/apexcharts.min.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/vendor/chart.js/chart.umd.js"></script>
+    <script src="~/vendor/echarts/echarts.min.js"></script>
+    <script src="~/vendor/quill/quill.min.js"></script>
+    <script src="~/vendor/simple-datatables/simple-datatables.js"></script>
+    <script src="~/vendor/tinymce/tinymce.min.js"></script>
+    <script src="~/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="~/Scripts/main.js"></script>
 
 </body>
 
