--- a/WebApplication1/Views/Shared/_Layout - player.cshtml
+++ b/WebApplication1/Views/Shared/_Layout - player.cshtml
@@ -114,7 +114,7 @@
 
             <!-- ======= 最新公告 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="~/News">
+                <a class="nav-link collapsed" href="~/Newsplayer">
                     <i class="ri-bank-fill"></i>
                     <span>最新公告</span>
                 </a>
