--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -39,11 +39,13 @@
 </head>
 
 <body>
+    
     <section>
-        
     </section>
+
     @Scripts.Render("/bundles/jquery")
     @RenderSection("scripts", required: false)
+    
     <!-- ======= Header ======= -->
     <header id="header" class="header fixed-top d-flex align-items-center">
 
@@ -64,26 +66,26 @@
 
         <nav class="header-nav ms-auto">
             <ul class="d-flex align-items-center">
-                
-               
+
+
 
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
                         <img src="~/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-                        <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+                        <span class="d-none d-md-block dropdown-toggle ps-2">您好，@ViewBag.Name</span>
                     </a><!-- End Profile Iamge Icon -->
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
-                            <h6>Kevin Anderson</h6>
-                            <span>Web Designer</span>
+                            <div>@ViewBag.Name</div>
+                            <span>系統管理者</span>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
 
-                        
+
 
                         <li>
                             <a class="dropdown-item d-flex align-items-center" href="~/Login">
@@ -101,7 +103,7 @@
     </header><!-- End Header -->
     <!-- ======= Sidebar ======= -->
     <aside id="sidebar" class="sidebar">
-     
+
         <ul class="sidebar-nav" id="sidebar-nav">
             <li class="nav-heading">系統功能</li>
             <!-- ======= 最新公告 ======= -->
@@ -178,7 +180,7 @@
                             <i class="bi bi-circle"></i><span>設備借用維護</span>
                         </a>
                     </li>
-                    
+
                 </ul>
             </li>
             <hr />
@@ -431,6 +433,7 @@
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                      
         </div>
     </footer><!-- End Footer -->
 
