--- a/WebApplication1/Views/Checkins/Index.cshtml
+++ b/WebApplication1/Views/Checkins/Index.cshtml
@@ -6,11 +6,12 @@
 }
 <head>
     <style>
-        .card{
-            padding:10px;
+        .card {
+            padding: 10px;
         }
-        .pagetitle{
-            font-size:15px;
+
+        .pagetitle {
+            font-size: 15px;
         }
     </style>
 </head>
@@ -26,7 +27,7 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-    
+
     <hr />
     <div class="card">
 
@@ -37,72 +38,63 @@
 
         </div>
         <div>
-            <button class="btn btn-danger">點我打卡</button> |
-            <button class="btn btn-success">我要離開點我一下</button> |
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#basicModal">
-                時數是怎麼計算的?
-            </button>
-            <div class="modal fade" id="basicModal" tabindex="-1" style="display: none;" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">時數計算方式</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            中午12:00~下午13:00為休息時間，故時數不算在內!<br />
-                            例如:王小樹今天上午8點開始訓練，下午5點結束訓練，則時數計算方式會是 <b>08:00~12:00(4hr)+13:00~17:00(4hr)</b>，總計時數會是 <b>8小時</b>。
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
-                    </div>
-                </div>
+            <div>
+                <button class="btn btn-danger">@Html.ActionLink("點我打卡", "Create", null, new { style = "color: white;" })</button>  |
+                <button class="btn btn-success">我要離開點我一下</button>
             </div>
+            
+            
+
         </div>
-           <hr />
-           <div>
-               <p>以下是您的打卡紀錄</p>
-           </div>
-           <table class="table table table-striped">
-               <tr>
-                   <th>
-                       上班時間
-                   </th>
-                   <th>
-                       下班時間
-                   </th>
-                   <th>
-                       時數
-                   </th>
-                   <th>
-                       備註
-                   </th>
-                   
-               </tr>
+        <hr />
+        <div>
+            <p>以下是您的打卡紀錄</p>
+        </div>
+        <table class="table table table-striped">
+            <tr>
+                <th>
+                    上班時間
+                </th>
+                <th>
+                    下班時間
+                </th>
+                <th>
+                    時數
+                </th>
+                <th>
+                    備註
+                </th>
 
-               @foreach (var item in Model)
-               {
-                   <tr>
-                       <td>
-                           @Html.DisplayFor(modelItem => item.Work_Date)
-                       </td>
-                       <td>
-                           @Html.DisplayFor(modelItem => item.Getoff_Date)
-                       </td>
-                       <td>
-                           @Html.DisplayFor(modelItem => item.time)
-                       </td>
-                       <td>
-                           @Html.DisplayFor(modelItem => item.Note)
-                       </td>
-                      
-                   </tr>
-               }
+            </tr>
 
-           </table>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Work_Date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Getoff_Date)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.time)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Note)
+                    </td>
 
+                </tr>
+            }
+
+        </table>
+        <hr />
+        <div class="faq">
+            <p>
+                <i class="ri-error-warning-fill"></i> 時數計算方式：<br />中午12:00~下午13:00為休息時間，故時數不算在內!<br />
+                例如:王小樹今天上午8點開始訓練，下午5點結束訓練，則時數計算方式會是 <b>08:00~12:00(4hr)+13:00~17:00(4hr)</b>，總計時數會是 <b>8小時</b>
+            </p>
+
+        </div>
     </div>
 
 </main>
