--- a/WebApplication1/Views/News/Create.cshtml
+++ b/WebApplication1/Views/News/Create.cshtml
@@ -38,8 +38,10 @@
             <div class="form-group">
                 表單單號:(預設系統自動帶入)
                 <div class="col-md-10">
+                    @ViewBag.NewFormNumber
+                    @*@ViewBag.NewFormNumber*@
                     @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
+        @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
                 </div>
             </div>
 
