--- a/WebApplication1/Views/News/Indexmanager.cshtml
+++ b/WebApplication1/Views/News/Indexmanager.cshtml
@@ -2,19 +2,21 @@
 
 @{
     ViewBag.Title = "最新公告";
-   
+    Layout = "~/Views/Shared/_Layout - manager.cshtml";
+
 }
 <head>
     <style>
-        .pagetitle{
-            font-size:15px;
+        .pagetitle {
+            font-size: 15px;
         }
-        .txt a{
-            color:white;
+
+        .txt a {
+            color: white;
         }
-        #card{
-            padding:10px;
-           
+
+        #card {
+            padding: 10px;
         }
     </style>
 </head>
@@ -38,17 +40,17 @@
                     公告時間
                 </th>
                 <th>
-                   公告類別
+                    公告類別
                 </th>
                 <th>
-                   公告主旨
+                    公告主旨
                 </th>
-                
+
                 <th>
-                   公告附件
+                    公告附件
                 </th>
                 <th>
-                  發布人
+                    發布人
                 </th>
                 <th>資料操作</th>
             </tr>
@@ -77,12 +79,12 @@
                         </button> |
                         <button class="btn btn-secondary">
                             <span class='txt'>@Html.ActionLink("查看公告", "Details", new { id = item.ID }, null)</span>
-                           
+
                         </button> |
                         <button class="btn btn-danger">
                             <span class='txt'>@Html.ActionLink("刪除", "Delete", new { id = item.ID }, null)</span>
-                            
-                        </button> 
+
+                        </button>
                     </td>
                 </tr>
             }
@@ -90,6 +92,6 @@
         </table>
 
     </div>
-    
+
 </main>
 
