--- a/WebApplication1/Views/News/Create.cshtml
+++ b/WebApplication1/Views/News/Create.cshtml
@@ -1,23 +1,32 @@
 ﻿@model WebApplication1.Models.News
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "新增公告";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Name = Session["Username"];
 }
 
 <head>
     <style>
-        #card{
-            padding:10px;
+        .card {
+            padding: 10px;
         }
-        .pagetitle{
-            font-size:15px;
+
+        .pagetitle {
+            font-size: 15px;
+        }
+        .txt a{
+            color:white;
+        }
+        .card{
+            padding:10px;
         }
     </style>
 </head>
-<main class="main" id="main">
 
+<main class="main" id="main">
     <div class="pagetitle">
-        <h1>最新公告維護 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者新增一筆最新公告紀錄。</span></h1>
+        <h1>最新公告 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>新增一筆最新公告輸入畫面。</span></h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
@@ -25,97 +34,84 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-
-    <div class="card info-card sales-card" id="card">
+    <button class="btn btn-success">
+        <span class="txt"><i class="ri-delete-back-2-fill"></i> @Html.ActionLink("返回", "Index")</span>
+    </button> <hr />
+    <div class="card" id="card">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <button class="btn btn-success"><i class="ri-arrow-left-line">@Html.ActionLink("返回", "Index", null, new { style = "color: white;" })</i></button>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                表單單號:(預設系統自動帶入)
-                <div class="col-md-10">
-                    @ViewBag.NewFormNumber
-                    @*@ViewBag.NewFormNumber*@
-                    @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
+            <div class="form-horizontal">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    表單單號:(系統預設自動建立單號)
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control", Value = ViewBag.ID,@readonly = "readonly" } })
+                        @*@Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })*@
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                建立時間:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Creat_Time, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Creat_Time, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    公告時間:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Creat_Time, new { htmlAttributes = new { @class = "form-control" ,Value = DateTime.Now.ToString(), @readonly = "readonly" } })
+                        @Html.ValidationMessageFor(model => model.Creat_Time, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                發布人:
-                <div class="col-md-10">
-                    @Html.DropDownList("Account_ID", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Account_ID, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    發布人:
+                    <div class="col-md-10">
+                        @Html.DropDownList("Account_ID", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Account_ID, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                公告類別:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    公告類別:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                公告主旨:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    公告主旨:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                公告內容:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    公告內容:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                附件上傳:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Upload, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Upload, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    附件網址:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Upload, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Upload, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="新增" class="btn btn-success" />
+                    </div>
                 </div>
             </div>
-            <div class="form-group">
-                發布日期:
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Creat_Time, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Creat_Time, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <br />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="送出" class="btn btn-success" />
-
-                </div>
-            </div>
-        </div>
         }
-
-
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
-
-
     </div>
+
+
+
+
 
 </main>
 
