--- a/WebApplication1/Views/News/Delete.cshtml
+++ b/WebApplication1/Views/News/Delete.cshtml
@@ -2,24 +2,26 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <head>
+
     <style>
-        #card{
+        .card{
             padding:10px;
         }
-        .pagetitle{
-            font-size:15px;
+        .pagetitle {
+            font-size: 15px;
+        }
+        .txt a{
+            color:white;
         }
     </style>
-    <script>
-        window.alert("注意！此為刪除資料頁面，請再次確認是否刪除此筆資料?");
-
-    </script>
 </head>
 <main class="main" id="main">
     <div class="pagetitle">
-        <h1>最新公告維護 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者進行刪除此筆最新公告紀錄。</span></h1>
+        <h1>最新公告 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>刪除此筆公告內容。</span></h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
@@ -27,51 +29,78 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
+    
+    <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+       
+            <i class="ri-delete-bin-5-fill"></i> 注意！！請再次確認是否刪除此筆資料！！
+          
+    </div>
+    <div class="card">
+        <dl class="dl-horizontal">
+            <dt>
+                公告時間:
+            </dt>
 
-    <strong><p class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">注意！此為刪除資料頁面，請再次確認是否刪除此筆資料?</p></strong>
-    <button class="btn btn-success"><i class="ri-arrow-left-line">@Html.ActionLink("返回", "Index", null, new { style = "color: white;" })</i></button>
-    <hr />
-    <div class="card info-card sales-card" id="card">
-        <table border="1" class="table table-striped">
-            <tr>
-                <td width="8%">建立時間:</td>
-                <td> @Html.DisplayFor(model => model.Creat_Time)</td>
-            </tr>
-            <tr>
-                <td width="8%">發布人:</td>
-                <td> @Html.DisplayFor(model => model.AccountData.Username)</td>
-            </tr>
-            <tr>
-                <td width="8%">公告類別:</td>
-                <td>  @Html.DisplayFor(model => model.Category)</td>
-            </tr>
-            <tr>
-                <td width="8%">公告主旨:</td>
-                <td>  @Html.DisplayFor(model => model.Address)</td>
-            </tr>
-            <tr>
-                <td width="8%">公告內容:</td>
-                <td> @Html.DisplayFor(model => model.Contant)</td>
-            </tr>
-            <tr>
-                <td width="8%">附件上傳:</td>
-                <td>  @Html.DisplayFor(model => model.Upload)</td>
-            </tr>
+            <dd>
+                @Html.DisplayFor(model => model.Creat_Time)
+            </dd>
 
-        </table>
-      
+            <dt>
+                公告類別:
+            </dt>
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
+            <dd>
+                @Html.DisplayFor(model => model.Category)
+            </dd>
 
-            <div class="form-actions no-color">
-                <input type="submit" value="確定刪除" class="btn btn-danger" />
+            <dt>
+                公告主旨:
+            </dt>
 
-            </div>
-        }
+            <dd>
+                @Html.DisplayFor(model => model.Address)
+            </dd>
+
+            <dt>
+                公告內容:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Contant)
+            </dd>
+
+            <dt>
+                附件網址:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Upload)
+            </dd>
+
+            <dt>
+                發佈人:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.AccountData.Username)
+            </dd>
+
+        </dl>
     </div>
 
 
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="確認刪除" class="btn btn-danger" /> |
+            
+            <button class="btn btn-success">
+                <span class="txt"><i class="ri-delete-back-2-fill"></i> @Html.ActionLink("返回", "Index")</span>
+            </button>
+        </div>
+    }
+    
 </main>
 
