--- a/WebApplication1/Views/News/Edit.cshtml
+++ b/WebApplication1/Views/News/Edit.cshtml
@@ -1,24 +1,28 @@
 ﻿@model WebApplication1.Models.News
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "編輯公告";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <head>
+
     <style>
-        #card{
+        .card{
             padding:10px;
         }
-        .pagetitle{
-            font-size:15px;
+        .pagetitle {
+            font-size: 15px;
+        }
+        .txt a{
+            color:white;
         }
     </style>
 </head>
-
-
 <main class="main" id="main">
+
     <div class="pagetitle">
-        <h1>最新公告維護 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者編輯此筆最新公告資訊。</span></h1>
+        <h1>最新公告 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>編輯此筆公告內容。</span></h1>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
@@ -26,80 +30,77 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-    <div class="card info-card sales-card" id="card">
 
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        <button class="btn btn-success">
+            <span class="txt"><i class="ri-delete-back-2-fill"></i> @Html.ActionLink("返回", "Index")</span>
+        </button> <hr />
         <div class="form-horizontal">
-            <button class="btn btn-success"><i class="ri-arrow-left-line">@Html.ActionLink("返回", "Index", null, new { style = "color: white;" })</i></button>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.ID)
+            <div class="card">
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.ID)
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Creat_Time, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Creat_Time, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Creat_Time, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    公告日期:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Creat_Time, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                        @Html.ValidationMessageFor(model => model.Creat_Time, "", new { @class = "text-danger" })
+                    </div>
                 </div>
+
+                <div class="form-group">
+                    發佈人:
+                    <div class="col-md-10">
+                        @Html.DropDownList("Account_ID", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
+                        @Html.ValidationMessageFor(model => model.Account_ID, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    公告分類:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                        @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    公告主旨:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    公告內容:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    附件網址:
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Upload, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Upload, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="儲存" class="btn btn-success" />
+                    </div>
+                </div>
+
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Account_ID, "Account_ID", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.DropDownList("Account_ID", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Account_ID, "", new { @class = "text-danger" })
-                </div>
-            </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Contant, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Upload, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Upload, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Upload, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <br />
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="儲存資料" class="btn btn-danger" />
-                </div>
-            </div>
         </div>
-        }
-
-    
-    </div>
+    }
 
 </main>
 
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
