--- a/WebApplication1/Views/News/Index.cshtml
+++ b/WebApplication1/Views/News/Index.cshtml
@@ -2,23 +2,33 @@
 
 @{
     ViewBag.Title = "最新公告";
-   
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Name = Session["Username"];
 }
+
 <head>
     <style>
-        .pagetitle{
-            font-size:15px;
+        .card {
+            padding: 10px;
         }
-        .txt a{
-            color:white;
+
+        .pagetitle {
+            font-size: 15px;
         }
-        #card{
-            padding:10px;
-           
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
         }
     </style>
 </head>
+
 <main class="main" id="main">
+
+
     <div class="pagetitle">
         <h1>最新公告 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>提供新增、修改、刪除一筆戰隊最新公告資訊。</span></h1>
         <nav>
@@ -28,29 +38,34 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-    <p>
-        <button class="btn btn-primary">@Html.ActionLink("新增一筆公告", "Create", null, new { style = "color: white;" })</button>
-    </p>
-    <div class="card info-card sales-card" id="card">
-        <table class="table">
+
+
+    <button class="btn btn-danger">
+        <span class="txt"><i class="ri-add-circle-fill"></i> @Html.ActionLink("新增", "Create")</span>
+    </button>
+
+
+    <hr />
+    <div id="card" class="card">
+        <table class="table table-striped">
+
             <tr>
                 <th>
                     公告時間
                 </th>
                 <th>
-                   公告類別
+                    公告類別
                 </th>
                 <th>
-                   公告主旨
+                    公告主旨
                 </th>
-                
+
                 <th>
-                   公告附件
+                    發布人
                 </th>
                 <th>
-                  發布人
+                    資料操作
                 </th>
-                <th>資料操作</th>
             </tr>
 
             @foreach (var item in Model)
@@ -66,30 +81,32 @@
                         @Html.DisplayFor(modelItem => item.Address)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Upload)
-                    </td>
-                    <td>
                         @Html.DisplayFor(modelItem => item.AccountData.Username)
                     </td>
                     <td>
-                        <button class="btn btn-primary">
-                            <span class='txt'>@Html.ActionLink("編輯", "Edit", new { id = item.ID }, null)</span>
+                        <button class="btn btn-success btn-sm">
+                            <span class="txt">@Html.ActionLink("修改", "Edit", new { id = item.ID })</span>
+                        </button>
+                        |
+                        <button class="btn btn-primary btn-sm">
+                            <span class="txt">@Html.ActionLink("查看公告", "Details", new { id = item.ID })</span>
                         </button> |
-                        <button class="btn btn-secondary">
-                            <span class='txt'>@Html.ActionLink("查看公告", "Details", new { id = item.ID }, null)</span>
-                           
-                        </button> |
-                        <button class="btn btn-danger">
-                            <span class='txt'>@Html.ActionLink("刪除", "Delete", new { id = item.ID }, null)</span>
-                            
-                        </button> 
+                        <button class="btn btn btn-danger btn-sm">
+                        <span class="txt">@Html.ActionLink("刪除", "Delete", new { id = item.ID })</span>
+                    </button>
+
                     </td>
                 </tr>
+              
             }
 
         </table>
 
     </div>
+
+
+
+    <!-----刪除 Model------->
     
 </main>
 
