完成帳號管理

--- a/WebApplication1/Views/AccountDatas/Edit.cshtml
+++ b/WebApplication1/Views/AccountDatas/Edit.cshtml
@@ -1,12 +1,31 @@
 ﻿@model WebApplication1.Models.AccountData
 
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <!DOCTYPE html>
 
 <html>
 <head>
+    <style>
+        .card {
+            padding: 10px;
+        }
+
+        .pagetitle {
+            font-size: 15px;
+        }
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
+        }
+    </style>
 </head>
         <meta name="viewport" content="width=device-width" />
    
