--- a/WebApplication1/Views/Shared/_Layout - manager.cshtml
+++ b/WebApplication1/Views/Shared/_Layout - manager.cshtml
@@ -109,7 +109,7 @@
             <li class="nav-heading">系統功能</li>
             <!-- ======= 最新公告 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="~/News">
+                <a class="nav-link collapsed" href="~/NewsManager">
                     <i class="ri-bank-fill"></i>
                     <span>最新公告</span>
                 </a>
