--- a/WebApplication1/Views/Shared/_Layout - player.cshtml
+++ b/WebApplication1/Views/Shared/_Layout - player.cshtml
@@ -115,7 +115,7 @@
 
             <!-- ======= 最新公告 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="~/News/Indexplayer">
+                <a class="nav-link collapsed" href="~/NewsPlayer">
                     <i class="ri-bank-fill"></i>
                     <span>最新公告</span>
                 </a>
