--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -2,6 +2,8 @@
 <html lang="en">
 @{
     ViewBag.Name = Session["Username"];
+    ViewBag.User_ID = Session["User_ID"];
+
 }
 <head>
     <meta charset="utf-8">
