--- a/WebApplication1/Views/AccountDatas/Index.cshtml
+++ b/WebApplication1/Views/AccountDatas/Index.cshtml
@@ -7,10 +7,24 @@
 
 
 <style>
+    
+    .card {
+        padding: 10px;
+    }
+
+    .pagetitle {
         font-size: 15px;
     }
+
+    .txt a {
+        color: white;
+    }
+
+    .card {
+        padding: 10px;
     }
 </style>
+
 
 <main class="main" id="main">
     <div class="pagetitle">
@@ -22,40 +36,43 @@
         </nav>
     <div class="card info-card sales-card" id="card">
         <p>
+            <button class="btn btn-danger">
+                <span class="txt"><i class="ri-add-circle-fill"></i> @Html.ActionLink("新增", "Create")</span>
+            </button>
         </p>
-        <table class="table">
+        <table class="table table-striped table-bordered">
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Account)
+                   帳號
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Username)
+                    使用者名稱
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Password)
+                   密碼
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.E_mail)
+                    電子信箱
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Phone)
+                    手機號碼
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Static)
+                   帳號狀態
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Creat)
+                    建立日期
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Logtime)
+                    最後一次登錄時間
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Note)
+                    備註
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Role.Role1)
+                   帳號權限
                 </th>
-                <th></th>
+                <th>資料操作</th>
             </tr>
 
             @foreach (var item in Model)
@@ -92,9 +109,8 @@
                         @Html.DisplayFor(modelItem => item.Role.Role1)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                        @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                        @Html.ActionLink("編輯", "Edit", new { id = item.ID }, new { @class = "btn btn-success px-2" }) |
+                        @Html.ActionLink("刪除", "Delete", new { id = item.ID }, new { @class = "btn btn-danger px-2" })
                     </td>
                 </tr>
             }
