--- a/WebApplication1/Views/Home/AdminDashboard.cshtml
+++ b/WebApplication1/Views/Home/AdminDashboard.cshtml
@@ -127,8 +127,9 @@
                         </div>
 
                     </div><!-- End Customers Card -->
+
                     <!-- Reports -->
-                    <div class="col-12">
+                    <!--<div class="col-12">
                         <div class="card">
 
                             <div class="filter">
@@ -145,10 +146,10 @@
                             </div>
 
                             <div class="card-body">
-                                <h5 class="card-title">Reports <span>/Today</span></h5>
+                                <h5 class="card-title">Reports <span>/Today</span></h5>-->
 
                                 <!-- Line Chart -->
-                                <div id="reportsChart"></div>
+                                <!--<div id="reportsChart"></div>
 
                                 <script>
                                     document.addEventListener("DOMContentLoaded", () => {
@@ -201,15 +202,15 @@
                                             }
                                         }).render();
                                     });
-                                </script>
+                                </script>-->
                                 <!-- End Line Chart -->
 
-                            </div>
+                            <!--</div>
 
                         </div>
-                    </div><!-- End Reports -->
+                    </div>--><!-- End Reports -->
                     <!-- Recent Sales -->
-                    <div class="col-12">
+                    <!--<div class="col-12">
                         <div class="card recent-sales overflow-auto">
 
                             <div class="filter">
@@ -280,9 +281,9 @@
                             </div>
 
                         </div>
-                    </div><!-- End Recent Sales -->
+                    </div>--><!-- End Recent Sales -->
                     <!-- Top Selling -->
-                    <div class="col-12">
+                    <!--<div class="col-12">
                         <div class="card top-selling overflow-auto">
 
                             <div class="filter">
@@ -353,15 +354,15 @@
                             </div>
 
                         </div>
-                    </div><!-- End Top Selling -->
+                    </div>--><!-- End Top Selling -->
 
                 </div>
             </div><!-- End Left side columns -->
             <!-- Right side columns -->
-            <div class="col-lg-4">
+            <!--<div class="col-lg-4">-->
 
                 <!-- Recent Activity -->
-                <div class="card">
+                <!--<div class="card">
                     <div class="filter">
                         <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -386,54 +387,54 @@
                                 <div class="activity-content">
                                     Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                            <div class="activity-item d-flex">
+                            <!--<div class="activity-item d-flex">
                                 <div class="activite-label">56 min</div>
                                 <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
                                 <div class="activity-content">
                                     Voluptatem blanditiis blanditiis eveniet
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                            <div class="activity-item d-flex">
+                            <!--<div class="activity-item d-flex">
                                 <div class="activite-label">2 hrs</div>
                                 <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
                                 <div class="activity-content">
                                     Voluptates corrupti molestias voluptatem
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                            <div class="activity-item d-flex">
+                            <!--<div class="activity-item d-flex">
                                 <div class="activite-label">1 day</div>
                                 <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
                                 <div class="activity-content">
                                     Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                            <div class="activity-item d-flex">
+                            <!--<div class="activity-item d-flex">
                                 <div class="activite-label">2 days</div>
                                 <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
                                 <div class="activity-content">
                                     Est sit eum reiciendis exercitationem
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                            <div class="activity-item d-flex">
+                            <!--<div class="activity-item d-flex">
                                 <div class="activite-label">4 weeks</div>
                                 <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
                                 <div class="activity-content">
                                     Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
                                 </div>
-                            </div><!-- End activity item-->
+                            </div>--><!-- End activity item-->
 
-                        </div>
+                        <!--</div>
 
                     </div>
-                </div><!-- End Recent Activity -->
+                </div>--><!-- End Recent Activity -->
                 <!-- Budget Report -->
-                <div class="card">
+                <!--<div class="card">
                     <div class="filter">
                         <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -504,9 +505,9 @@
                         </script>
 
                     </div>
-                </div><!-- End Budget Report -->
+                </div>--><!-- End Budget Report -->
                 <!-- Website Traffic -->
-                <div class="card">
+                <!--<div class="card">
                     <div class="filter">
                         <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -581,9 +582,9 @@
                         </script>
 
                     </div>
-                </div><!-- End Website Traffic -->
+                </div>--><!-- End Website Traffic -->
                 <!-- News & Updates Traffic -->
-                <div class="card">
+                <!--<div class="card">
                     <div class="filter">
                         <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
                         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
@@ -631,12 +632,12 @@
                                 <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
                             </div>
 
-                        </div><!-- End sidebar recent posts-->
+                        </div>--><!-- End sidebar recent posts-->
 
-                    </div>
-                </div><!-- End News & Updates -->
+                    <!--</div>
+                </div>--><!-- End News & Updates -->
 
-            </div><!-- End Right side columns -->
+            <!--</div>--><!-- End Right side columns -->
 
         </div>
     </section>
