--- a/WebApplication1/Views/Home/ManagerDashboard.cshtml
+++ b/WebApplication1/Views/Home/ManagerDashboard.cshtml
@@ -5,4 +5,8 @@
 }
 
 <h2>ManagerDashboard</h2>
+<main class="main" id="main">
+    <a href="~/News" class="btn btn-danger"> Go to the News!</a>
+</main>
+
 
