--- a/WebApplication1/Views/News/Delete.cshtml
+++ b/WebApplication1/Views/News/Delete.cshtml
@@ -29,12 +29,13 @@
             </ol>
         </nav>
     </div><!-- End Page Title -->
-    
+
     <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
-       
-            <i class="ri-delete-bin-5-fill"></i> 注意！！請再次確認是否刪除此筆資料！！
-          
+
+        <i class="ri-delete-bin-5-fill"></i> 注意！！請再次確認是否刪除此筆資料！！
+
     </div>
+
     <div class="card">
         <dl class="dl-horizontal">
             <dt>
@@ -88,19 +89,26 @@
         </dl>
     </div>
 
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="確認刪除" class="btn btn-danger" /> |
-            
-            <button class="btn btn-success">
-                <span class="txt"><i class="ri-delete-back-2-fill"></i> @Html.ActionLink("返回", "Index")</span>
-            </button>
+    <div class="row">
+        <div class="col-md-1">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-actions no-color">
+                     <input type="submit" value="確認刪除" class="btn btn-danger" /> 
+                </div>
+            }
         </div>
-    }
+        
+    <div class="col-md-1">
+       <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
+
+    </div>
+    </div>
     
+
+
+
+
 </main>
 
