--- a/WebApplication1/Views/News/Edit.cshtml
+++ b/WebApplication1/Views/News/Edit.cshtml
@@ -34,9 +34,8 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        <button class="btn btn-success">
-            <span class="txt"><i class="ri-delete-back-2-fill"></i> @Html.ActionLink("返回", "Index")</span>
-        </button> <hr />
+        <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
+        <hr />
         <div class="form-horizontal">
             <div class="card">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -77,7 +76,7 @@
                 <div class="form-group">
                     公告內容:
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Contant, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.Contant, new { @class = "form-control", @style = "white-space: pre;", @rows = 10, @wrap = "virtual" })
                         @Html.ValidationMessageFor(model => model.Contant, "", new { @class = "text-danger" })
                     </div>
                 </div>
