--- a/WebApplication1/Views/AccountDatas/Delete.cshtml
+++ b/WebApplication1/Views/AccountDatas/Delete.cshtml
@@ -2,23 +2,54 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    
+    ViewBag.Title = "刪除帳號";
+
     }
 
 <!DOCTYPE html>
 
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<main class="main" id="main">
+    <style>
+        .card {
+            padding: 10px;
+        }
 
+        .pagetitle {
+            font-size: 15px;
+        }
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
+        }
+
+        #card-body {
+            padding: 10px;
+        }
+    </style>
+    </head>
+<main class="main" id="main">
     <div class="pagetitle">
-        <h1>刪除帳號 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>使用者刪除一筆帳號。</span></h1>
+        <h1>最新公告 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>刪除此筆公告內容。</span></h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
+                <li class="breadcrumb-item active">最新公告</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+
+        <i class="ri-delete-bin-5-fill"></i> 注意！！請再次確認是否刪除此筆資料！！
+
     </div>
-    <body>
-        <div>
-            <hr /> 
+    <div class="card" id="card">
+        <div id="card-body">
+
             <dl class="dl-horizontal">
                 <dt>
                     @Html.DisplayNameFor(model => model.Account)
@@ -101,13 +132,22 @@
                 </dd>
 
             </dl>
-
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-1">
+            @using (Html.BeginForm())
+            {
                 @Html.AntiForgeryToken()
-
                 <div class="form-actions no-color">
-                    <input type="submit" value="Delete" class="btn btn-danger" /> |
-                    @Html.ActionLink("Back to List", "Index")
+                    <input type="submit" value="確認刪除" class="btn btn-danger" />
                 </div>
             }
         </div>
-    </body>
+        <div class="col-md-1">
+            <button class="btn btn-success" onclick="history.go(-1)"><i class="ri-delete-back-2-fill"></i> 返回</button>
+        </div>
+    </div>
+
+
+</main>
