--- a/WebApplication1/Views/AccountDatas/Index.cshtml
+++ b/WebApplication1/Views/AccountDatas/Index.cshtml
@@ -3,11 +3,12 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Success = Session["msg"];
 }
 
 
 <style>
-    
+
     .card {
         padding: 10px;
     }
@@ -27,6 +28,10 @@
 
 
 <main class="main" id="main">
+
+   
+
+
     <div class="pagetitle">
         <h1>帳號管理 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>提供新增、修改、刪除一筆使用者帳號。</span></h1>
         <nav>
@@ -34,90 +39,99 @@
                 <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
             </ol>
         </nav>
-    <div class="card info-card sales-card" id="card">
-        <p>
-            <button class="btn btn-danger">
-                <span class="txt"><i class="ri-add-circle-fill"></i> @Html.ActionLink("新增", "Create")</span>
-            </button>
-        </p>
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>
-                   帳號
-                </th>
-                <th>
-                    使用者名稱
-                </th>
-                <th>
-                   密碼
-                </th>
-                <th>
-                    電子信箱
-                </th>
-                <th>
-                    手機號碼
-                </th>
-                <th>
-                   帳號狀態
-                </th>
-                <th>
-                    建立日期
-                </th>
-                <th>
-                    最後一次登錄時間
-                </th>
-                <th>
-                    備註
-                </th>
-                <th>
-                   帳號權限
-                </th>
-                <th>資料操作</th>
-            </tr>
-
-            @foreach (var item in Model)
-            {
+        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+            系統訊息: @ViewBag.Success
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <div class="card info-card sales-card" id="card">
+            <p>
+                <button class="btn btn-danger">
+                    <span class="txt"><i class="ri-add-circle-fill"></i> @Html.ActionLink("新增", "Create")</span>
+                </button>
+            </p>
+            <table class="table table-striped table-bordered">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Account)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Username)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Password)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.E_mail)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Phone)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Static)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Creat)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Logtime)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Note)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Role.Role1)
-                    </td>
-                    <td>
-                        @Html.ActionLink("編輯", "Edit", new { id = item.ID }, new { @class = "btn btn-success px-2" }) |
-                        @Html.ActionLink("刪除", "Delete", new { id = item.ID }, new { @class = "btn btn-danger px-2" })
-                    </td>
+                    <th>
+                        帳號
+                    </th>
+                    <th>
+                        使用者名稱
+                    </th>
+                    <th>
+                        密碼
+                    </th>
+                    <th>
+                        電子信箱
+                    </th>
+                    <th>
+                        手機號碼
+                    </th>
+                    <th>
+                        帳號狀態
+                    </th>
+                    <th>
+                        建立日期
+                    </th>
+                    <th>
+                        最後一次登錄時間
+                    </th>
+                    <th>
+                        備註
+                    </th>
+                    <th>
+                        帳號權限
+                    </th>
+                    <th>資料操作</th>
                 </tr>
-            }
 
-        </table>
-    </div>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Account)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Username)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Password)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.E_mail)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Phone)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Static)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Creat)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Logtime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Note)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Role.Role1)
+                        </td>
+                        <td>
+                            @Html.ActionLink("編輯", "Edit", new { id = item.ID }, new { @class = "btn btn-success px-2" }) |
+                            @Html.ActionLink("刪除", "Delete", new { id = item.ID }, new { @class = "btn btn-danger px-2" })
+                        </td>
+                    </tr>
+                }
+
+            </table>
+
+
 </main>
+
+
+
+
 
 
 
